<resources>
    <string name="app_name">NurseryStoreAndroidApp</string>
    <string name="todo">TODO</string>
    <string name="indoor_plants">Indoor Plants</string>
    <string name="view_all">View All</string>
    <string name="pots_and_planters">Pots and Planters</string>
    <string name="category">CATEGORY</string>
    <string name="textview">TextView</string>
    <string name="size">SIZE</string>
    <string name="small">Small</string>
    <string name="description">This small green and red succulent grows in the shape of a star giving it its Christmas name. Yellow bumps run across the leaves and border the edges. It turns more red when happily stressed. Christmas Carol’ has red-pink flowers that typically bloom in the fall.</string>
    <string name="free_delivery">* Free Delivery</string>
    <string name="details">Details</string>
    <string name="care">Care</string>
    <string name="delivery">Delivery</string>
    <string name="type">TYPE</string>
    <string name="placement">PLACEMENT</string>
    <string name="pot">POT</string>
    <string name="layer">LAYER</string>
    <string name="height">HEIGHT</string>
    <string name="dimensions">DIMENSIONS</string>
</resources>